fix: fix bubbles not showing

--- a/client/src/scss/App.scss
+++ b/client/src/scss/App.scss
@@ -51,8 +51,20 @@ img {
   background-color: rgba(255, 255, 255, 0.7);
   border-radius: 50%;
   position: absolute;
-  animation: bubbleAnimation 5s infinite;
+  animation: bubbleAnimation 5s infinite ease-in-out;
 }
+
+@keyframes bubbleAnimation {
+  0% {
+    transform: translateY(0); /* Start from the bottom */
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-300px); /* Move upwards */
+    opacity: 0;
+  }
+}
+
 
 @keyframes bubbleAnimation {
   0% {
@@ -60,7 +72,7 @@ img {
     opacity: 1;
   }
   100% {
-    transform: translateY(-100px);
+    transform: translateY(-500px);
     opacity: 0;
   }
 }
